--- a/welfare/public/index.html
+++ b/welfare/public/index.html
@@ -23,6 +23,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.paypal.com/sdk/js?currency=CAD&client-id=AfKzENcCLvldjxCs5noL1UOxZbZaBDbXAQADE0C-VD9sb7tlDlyBrdNgwEULPuWnpcaDU95tPuYkztFC"></script>
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
